--- a/src/components/LetterCards.css
+++ b/src/components/LetterCards.css
@@ -22,7 +22,7 @@
   transition: transform 0.6s;
 }
 
-.letter-image.flipped {
+.letter-card.flipped .letter-image {
   transform: rotateY(180deg);
 }
 
@@ -38,4 +38,8 @@
     width: 50px;
     height: 70px;
   }
+}
+
+.hidden {
+  display: none;
 }
